# scratch3D

./: App.cpp  App.h  AppWindow.cpp  AppWindow.h  CMakeLists.txt  Engine.cpp  Engine.h  Graphics.cpp  Graphics.h  Logger.cpp  Logger.h  Matrix4x4.cpp  Matrix4x4.h  Mesh.cpp  Mesh.h  MeshObject.cpp  MeshObject.h  ObjectMesh.cpp  ObjectMesh.h  Polygon.cpp  Polygon.h  README.md  Scene.cpp  Scene.h  Texture.cpp  Texture.h  Vec2.cpp  Vec2.h  Vec3.h  Vec3d.cpp  Vec3d.h  main.cpp
Scenes/: AfricanHeadScene.cpp  AfricanHeadScene.h  JeepScene.cpp  JeepScene.h  MeiPosedScene.cpp  MeiPosedScene.h  RotatingObjectScene.cpp  RotatingObjectScene.h  TestCubeScene.cpp  TestCubeScene.h
structs/: Matrix4x4.cpp  Matrix4x4.h  Texture.cpp  Texture.h  Vec2.h  Vec3.cpp
